--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		<header>
 			<table>
 				<tr>
-					<td class="photo"><img src="img/mg.jpg" alt="Profile photo" /></td>
+					<td class="photo">
+						<img src="img/mg.jpg" alt="Profile photo" />
+					</td>
 					<td class="title">
 						<h1>Minor E. Gordon, Ph.D.</h1>
 					</td>
@@ -23,35 +25,37 @@
 		<section>
 			<h3 class="section-header">CV</h3>
 			<ul>
-				<li><a href="mg-cv.pdf">PDF</a></li>
+				<li>
+					<a href="mg-cv.pdf">PDF</a>
+				</li>
 			</ul>
 		</section>
 		<section>
 			<h3 class="section-header">Professional background</h3>
 			<p>
-				I am a <a href="http://mg4.consulting">freelance software consultant</a>. I hold a Ph.D. in Computer Science from the
-				University of Cambridge, where I worked in the <a href="https://www.cl.cam.ac.uk/research/srg/opera/">Opera Group</a>				at the <a href="https://www.cl.cam.ac.uk">Computer Laboratory</a>.
+				I am a
+				<a href="http://mg4.consulting">software engineer</a>. I hold a Ph.D. in Computer Science from the University of Cambridge, where I worked in the
+				<a href="https://www.cl.cam.ac.uk/research/srg/opera/">Opera Group</a> at the
+				<a href="https://www.cl.cam.ac.uk">Computer Laboratory</a>.
 			</p>
-		</section>
-		<section>
-			<h3 class="section-header">Interested in hiring me?</h3>
-			Please visit my <a href="http://mg4.consulting">company page</a>.
 		</section>
 		<section>
 			<h3 class="section-header">Publications</h3>
 			<ul>
-				<li>My dissertation: <a class="publication" href="http://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-781.pdf">Stage
-						scheduling for CPU-intensive servers</a></li>
-				<li>Abstract of my Diplomarbeit: <a class="publication" href="https://www.kbs.tu-berlin.de/menue/abschlussarbeiten_alte_version/abgeschlossene_arbeiten/gordon_minor/">Staged
-						Design for Highly Concurrent Web Servers</a></li>
-				<li>Book reviews: <a class="publication" href="http://www.computer.org/portal/web/csdl/doi/10.1109/MDSO.2007.17">Twisted
-						in Knots</a>, <a class="publication" href="http://www.computer.org/portal/web/csdl/doi/10.1109/MDSO.2004.16">An
-						Introduction to RDF Technologies: Too Little, Too Soon</a></li>
+				<li>My dissertation:
+					<a class="publication" href="http://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-781.pdf">Stage scheduling for CPU-intensive servers</a>
+				</li>
+				<li>Abstract of my Diplomarbeit:
+					<a class="publication" href="https://www.kbs.tu-berlin.de/menue/abschlussarbeiten_alte_version/abgeschlossene_arbeiten/gordon_minor/">Staged Design for Highly Concurrent Web Servers</a>
+				</li>
+				<li>Book reviews:
+					<a class="publication" href="http://www.computer.org/portal/web/csdl/doi/10.1109/MDSO.2007.17">Twisted in Knots</a>,
+					<a class="publication" href="http://www.computer.org/portal/web/csdl/doi/10.1109/MDSO.2004.16">An Introduction to RDF Technologies: Too Little, Too Soon</a>
+				</li>
 			</ul>
 		</section>
 		<section>
 			<h3 class="section-header">Personal</h3>
-			<ul></ul>
 			<table class="personal">
 				<tr>
 					<td colspan="2">"Minor" is a family name. My father, Dr. Minor W. Gordon, is a clinical psychologist in Claremore, Oklahoma, where I
@@ -62,11 +66,14 @@
 					<td colspan="2">&nbsp;</td>
 				</tr>
 				<tr>
-					<td class="vertical-align-top">I am passionate about the history of science and technology.<br/>
-						I am an <a href="books.html">avid reader</a>, usually of
-						history books.</td>
-					<td class="text-right" rowspan="2"><a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery"><img
-							src="img/orrery.jpg" alt="A Philosopher Lecturing on the Orrery" /></a></td>
+					<td class="vertical-align-top">I am passionate about the history of science and technology.
+						<br/> I am an
+						<a href="books.html">avid reader</a>, usually of history books.</td>
+					<td class="text-right" rowspan="2">
+						<a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery">
+							<img src="img/orrery.jpg" alt="A Philosopher Lecturing on the Orrery" />
+						</a>
+					</td>
 				</tr>
 			</table>
 		</section>
