--- a/books.html
+++ b/books.html
@@ -65,7 +65,7 @@
 			<ul>
 				<li>Erich Fried</li>
 				<li>Nikki Giovanni</li>
-				<li>Pablo Nerudo</li>
+				<li>Pablo Neruda</li>
 				<li>Rainer Maria Rilke</li>
 				<li>Arthur Rimbaud</li>
 			</ul>
