--- a/index.html
+++ b/index.html
@@ -10,47 +10,13 @@ layout: page
     </div>
     <div class="row mt-4">
         <div class="col-12">
-            <h3>CV</h3>
-            <ul>
-                <li><a href="mg-cv.pdf">PDF</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="row mt-2">
-        <div class="col-12">
-            <h3>Professional background</h3>
+            <h3>Professional</h3>
             <p>
-                I am a
-                <a href="http://mg4.consulting">software engineer</a>. I hold a Ph.D. in Computer Science
-                from the
-                University of Cambridge, where I worked in the
-                <a href="https://www.cl.cam.ac.uk/research/srg/opera/">Opera Group</a> at the
-                <a href="https://www.cl.cam.ac.uk">Computer Laboratory</a>.
+                I am a <a href="https://en.wikipedia.org/wiki/Computer_scientist">computer scientist</a>, <a href="https://en.wikipedia.org/wiki/Software_architect">software architect</a>, and <a href="https://www.youtube.com/watch?v=WkJpEG4KbN4">thinker-doer</a>. I am passionate about applying technology in ways that help individuals and society.
             </p>
-        </div>
-    </div>
-    <div class="row mt-2">
-        <div class="col-12">
-            <h3>Publications</h3>
-            <ul>
-                <li>My dissertation:
-                    <a class="publication" href="http://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-781.pdf">Stage
-                        scheduling for CPU-intensive servers</a>
-                </li>
-                <li>Abstract of my Diplomarbeit:
-                    <a class="publication"
-                       href="https://www.kbs.tu-berlin.de/menue/abschlussarbeiten_alte_version/abgeschlossene_arbeiten/gordon_minor/">Staged
-                        Design for Highly Concurrent Web Servers</a>
-                </li>
-                <li>Book reviews:
-                    <a class="publication"
-                       href="http://www.computer.org/portal/web/csdl/doi/10.1109/MDSO.2007.17">Twisted
-                        in Knots</a>,
-                    <a class="publication"
-                       href="http://www.computer.org/portal/web/csdl/doi/10.1109/MDSO.2004.16">An
-                        Introduction to RDF Technologies: Too Little, Too Soon</a>
-                </li>
-            </ul>
+            <p>
+                For further information please see my <a href="mg-cv.pdf">CV</a> or the <a href="https://mg4.consulting">web site of my consulting company</a>.
+            </p>
         </div>
     </div>
     <div class="row mt-2">
@@ -59,20 +25,20 @@ layout: page
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 pl-0">
-                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, is a clinical
-                            psychologist
-                            in Claremore, Oklahoma, where I
-                            grew up. My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore,
-                            as was his
-                            father, Dr. Minor H. Gordon.</p>
+                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, is a clinical psychologist in Claremore, Oklahoma, where I grew up.</p>
+                        <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father, Dr. Minor H. Gordon.</p>
+                        <p>My son, Minor K. Gordon, was born in 2018. He is currently pursuing his doctorate in statistical astrophysics.</p>
                     </div>
+                </div>
+                <div class="row">
+                    <br/>
                 </div>
                 <div class="row mt-2">
                     <div class="col-5 pl-0">
                         <p> I am passionate about the history of science and technology.
                             <br/>
                             <br/>
-                            I am an <a href="books.html">avid reader</a>, usually of history books.</p>
+                            I am a lifelong learner and <a href="books.html">avid reader</a>, usually of history books.</p>
                     </div>
                     <div class="col-5 offset-2">
                         <a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery">
