update CV, pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: page
     <div class="row">
         <div class="col-12">
             <img class="d-inline-block mr-4" src="img/mg.jpg" alt="Profile photo"/>
-            <h1 class="d-inline-block ml-4">Minor E. Gordon, Ph.D.</h1>
+            <h1 class="d-inline-block ml-4">Minor E. Gordon</h1>
         </div>
     </div>
     <div class="row mt-4">
