web page styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: page
                 I am a <a href="https://en.wikipedia.org/wiki/Computer_scientist">computer scientist</a>, <a href="https://en.wikipedia.org/wiki/Software_architect">software architect</a>, and <a href="https://www.youtube.com/watch?v=WkJpEG4KbN4">thinker-doer</a>. I am passionate about applying technology in ways that help individuals and society.
             </p>
             <p>
-                For further information please see my <a href="mg-cv.pdf">CV</a> or the <a href="https://mg4.consulting">web site of my consulting company</a>.
+                For further information please see my <a href="mg-cv.pdf">CV</a>.
             </p>
         </div>
     </div>
@@ -34,13 +34,13 @@ layout: page
                     <br/>
                 </div>
                 <div class="row mt-2">
-                    <div class="col-5 pl-0">
+                    <div class="col-4 pl-0">
                         <p> I am passionate about the history of science and technology.
                             <br/>
                             <br/>
                             I am a lifelong learner and <a href="books.html">avid reader</a>, usually of history books.</p>
                     </div>
-                    <div class="col-5 offset-2">
+                    <div class="col-4 offset-1">
                         <a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery">
                             <img src="img/orrery.jpg" alt="A Philosopher Lecturing on the Orrery"/>
                         </a>
