--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@ layout: page
                 <div class="row">
                     <br/>
                 </div>
+                <div class="row">
+                    <p>
+                    My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion historian. In my free time I work with Jennifer and our colleague&nbsp;<a href="https://www.ardenkirkland.com">Arden Kirkland<a/>&nbsp;on projects supporting digital costume collections.
+                    </p>
+                </div>
+                <div class="row">
+                    <br/>
+                </div>
                 <div class="row mt-2">
                     <div class="col-4 pl-0">
                         <p> I am passionate about the history of science and technology.
