--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: page
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 pl-0">
-                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, is a clinical psychologist in Claremore, Oklahoma, where I grew up.</p>
+                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, was a clinical psychologist in Claremore, Oklahoma, where I grew up.</p>
                         <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father, Dr. Minor H. Gordon.</p>
                         <p>My son, Minor K. Gordon, was born in 2018.</p>
                     </div>
