update to Bootstrap 5

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: page
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <img class="d-inline-block mr-4" src="img/mg.jpg" alt="Profile photo"/>
-            <h1 class="d-inline-block ml-4">Minor E. Gordon</h1>
+            <img class="d-inline-block me-4" src="img/mg.jpg" alt="Profile photo"/>
+            <h1 class="d-inline-block ms-4">Minor E. Gordon</h1>
         </div>
     </div>
     <div class="row mt-4">
@@ -24,7 +24,7 @@ layout: page
             <h3>Personal</h3>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 pl-0">
+                    <div class="col-12 ps-0">
                         <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, was a clinical psychologist in Claremore, Oklahoma, where I grew up.</p>
                         <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father, Dr. Minor H. Gordon.</p>
                         <p>My son, Minor K. Gordon, was born in 2018.</p>
@@ -42,7 +42,7 @@ layout: page
                     <br/>
                 </div>
                 <div class="row mt-2">
-                    <div class="col-4 pl-0">
+                    <div class="col-4 ps-0">
                         <p> I am passionate about the history of science and technology.
                             <br/>
                             <br/>
