--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: page
                         <p> I am passionate about the history of science and technology.
                             <br/>
                             <br/>
-                            I am a lifelong learner and <a href="books.html">avid reader</a>, usually of history books.</p>
+                            I am a lifelong learner and <a href="favorite-books.html">avid reader</a>, usually of history books.</p>
                     </div>
                     <div class="col-4 offset-1">
                         <a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery">
