Minor E. Gordon -> Minor Gordon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: page
     <div class="row">
         <div class="col-12">
             <img class="d-inline-block me-4" src="img/mg.jpg" alt="Profile photo"/>
-            <h1 class="d-inline-block ms-4">Minor E. Gordon</h1>
+            <h1 class="d-inline-block ms-4">Minor Gordon</h1>
         </div>
     </div>
     <div class="row mt-4">
@@ -32,7 +32,7 @@ layout: page
                 </div>
                 <div class="row">
                     <p>
-                    My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion historian. In my free time I work with Jennifer and our colleague&nbsp;<a href="https://www.ardenkirkland.com">Arden Kirkland<a/>&nbsp;on projects supporting digital costume collections.
+                    My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion historian. In my free time I work with Jennifer and our colleague&nbsp;<a href="https://www.ardenkirkland.com">Arden Kirkland</a>&nbsp;on projects supporting digital costume collections.
                     </p>
                 </div>
                 <div class="row">
