--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@ layout: page
         <div class="col-12">
             <h3>Professional</h3>
             <p>
-                I am a <a href="https://en.wikipedia.org/wiki/Computer_scientist">computer scientist</a>, <a href="https://en.wikipedia.org/wiki/Software_architect">software architect</a>, and <a href="https://www.youtube.com/watch?v=WkJpEG4KbN4">thinker-doer</a>. I am passionate about applying technology in ways that help individuals and society.
+                I am a software and solutions engineer, technical lead, thinker-doer, and occasional flower arranger.
+            </p>
+            <p>
+                Since earning my Ph.D. in Computer Science I've worked in industrial research, small businesses and startups, and academia. I thrive in situations that require lateral thinking, wearing multiple hats, and dealing with ambiguity while still creating value.
+            </p>
+            <p>
+                In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online.</p>
             </p>
         </div>
     </div>
@@ -22,8 +28,10 @@ layout: page
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 ps-0">
-                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, was a clinical psychologist in Claremore, Oklahoma, where I grew up.</p>
-                        <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father, Dr. Minor H. Gordon.</p>
+                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, was a clinical psychologist in
+                            Claremore, Oklahoma, where I grew up.</p>
+                        <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father,
+                            Dr. Minor H. Gordon.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -31,7 +39,10 @@ layout: page
                 </div>
                 <div class="row">
                     <p>
-                    My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion historian. In my free time I work with Jennifer and our colleague&nbsp;<a href="https://www.ardenkirkland.com">Arden Kirkland</a>&nbsp;on projects supporting digital costume collections.
+                        My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion
+                        historian. In my free time I work with Jennifer and our colleague&nbsp;<a
+                            href="https://www.ardenkirkland.com">Arden Kirkland</a>&nbsp;on projects supporting digital
+                        costume collections.
                     </p>
                 </div>
                 <div class="row">
@@ -42,7 +53,8 @@ layout: page
                         <p> I am passionate about the history of science and technology.
                             <br/>
                             <br/>
-                            I am a lifelong learner and <a href="favorite-books.html">avid reader</a>, usually of history books.</p>
+                            I am a lifelong learner and <a href="favorite-books.html">avid reader</a>, usually of
+                            history books.</p>
                     </div>
                     <div class="col-4 offset-1">
                         <a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery">
