--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@ layout: page
     <div class="row mt-4">
         <div class="col-12">
             <h3>Professional</h3>
-            <p>
-                I am a software and solutions engineer, technical lead, thinker-doer, and occasional flower arranger.
-            </p>
-            <p>
-                Since earning my Ph.D. in Computer Science I've worked in industrial research, small businesses and startups, and academia. I thrive in situations that require lateral thinking, wearing multiple hats, and dealing with ambiguity while still creating value.
-            </p>
-            <p>
-                In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online.</p>
-            </p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 ps-0">
+                        <p>
+                            I am a software and solutions engineer, technical lead, thinker-doer, and occasional flower arranger.
+                        </p>
+                        <p>
+                            Since earning my Ph.D. in Computer Science I've worked in industrial research, small businesses and startups, and academia. I thrive in situations that require lateral thinking, wearing multiple hats, and dealing with ambiguity while still creating value.
+                        </p>
+                        <p>
+                            In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online.</p>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row mt-2">
