refining projects page

--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,13 @@ title: Projects
     </div>
     <div class="row">
         {% include project-card.html
+            href="https://github.com/minorg/awesome-generalist-software-engineer"
+            img_src="/img/awesome-generalist-software-engineer.png"
+            subtitle="A curated list of resources for generalist software engineers"
+            title="awesome-generalist-software-engineer"
+        %}
+        {% include project-card.html
+            class="ms-4"
             href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
             img_src="/img/dressdiscover.png"
             subtitle="Visual workflow for cataloging cultural heritage objects"
