--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,13 @@ title: Projects
         %}
         {% include project-card.html
             class="ms-4"
+            href="https://bildungsroman.minorgordon.net/Passion/"
+            img_src="/img/bildungsroman.jpg"
+            subtitle="Digital exhibition exploring personal themes"
+            title="Bildungsroman"
+        %}
+        {% include project-card.html
+            class="ms-4"
             href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
             img_src="/img/dressdiscover.png"
             subtitle="Visual workflow for cataloging cultural heritage objects"
