--- a/favorite-books.html
+++ b/favorite-books.html
@@ -45,6 +45,7 @@ title: Favorite books
                 <li>Karen Armstrong: <i>The Great Transformation</i></li>
                 <li>Robert Caro: Multi-volume Lyndon Johnson biography</li>
                 <li>Richard Feynman: <i>Surely You're Joking, Mr. Feynman!</i></li>
+                <li>Michael Hiltzik: <i>Dealers of Lightning: Xerox PARC and the Dawn of the Computer Age</i></li>
                 <li>John Keegan: <i>The Face of Battle</i></li>
                 <li>Steven Levy: <i>Hackers</i></li>
                 <li>Robert K. Massie: <i>Dreadnought</i></li>
