--- a/index.html
+++ b/index.html
@@ -4,72 +4,64 @@ title: About
 ---
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12">
-            <img class="d-inline-block me-4" src="img/mg.jpg" alt="Profile photo"/>
-            <h1 class="d-inline-block ms-4">Minor Gordon</h1>
+        <div class="col-12 px-0 text-center">
+            <h1>Minor Gordon</h1>
         </div>
     </div>
-    <div class="row mt-4">
-        <div class="col-12">
-            <h3>Professional</h3>
+    <div class="row">
+        <div class="col-sm-12 col-md-4 mt-4 ps-0">
             <div class="container-fluid">
+                <div class="row mt-2 text-center">
+                    <h3>Professional</h3>
+                </div>
                 <div class="row">
                     <div class="col-12 ps-0">
                         <p>
-                            I am a software and solutions engineer, technical lead, thinker-doer, and occasional flower arranger.
+                            I am a senior software and solutions engineer, technical lead, thinker-doer, and occasional flower arranger.
                         </p>
                         <p>
                             Since earning my Ph.D. in Computer Science I've worked in industrial research, small businesses and startups, and academia. I thrive in situations that require lateral thinking, wearing multiple hats, and dealing with ambiguity while still creating value.
-                        </p>
-                        <p>
-                            In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online.</p>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row mt-2">
-        <div class="col-12">
-            <h3>Personal</h3>
+        <div class="col-sm-12 col-md-4 mt-4 px-0 text-center">
+            <a href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9"><img alt="Image of a tulip" class="mt-4" src="img/tulip.webp" style="max-width: 300px"/></a>
+        </div>
+        <div class="col-sm-12 col-md-4 mt-4 pe-0">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12 ps-0">
+                <div class="row text-center">
+                    <h3>Personal</h3>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-6 ps-0">
+                        <h5 class="text-center">The name "Minor"</h5>
                         <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, was a clinical psychologist in
                             Claremore, Oklahoma, where I grew up.</p>
                         <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father,
                             Dr. Minor H. Gordon.</p>
                     </div>
-                </div>
-                <div class="row">
-                    <br/>
-                </div>
-                <div class="row">
-                    <p>
-                        My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion
-                        historian. In my free time I work with Jennifer and our colleague&nbsp;<a
-                            href="https://www.ardenkirkland.com">Arden Kirkland</a>&nbsp;on projects supporting digital
-                        costume collections.
-                    </p>
-                </div>
-                <div class="row">
-                    <br/>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-4 ps-0">
-                        <p> I am passionate about the history of science and technology.
-                            <br/>
-                            <br/>
+                    <div class="col-6 pe-0 ps-4">
+                        <h5 class="text-center">Interests</h5>
+                        <p>
+                            My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion
+                            historian. In my free time I work with Jennifer and our colleague&nbsp;<a
+                                href="https://www.ardenkirkland.com">Arden Kirkland</a>&nbsp;on projects supporting digital
+                            costume collections.
+                        </p>
+                        <p>
                             I am a lifelong learner and <a href="favorite-books.html">avid reader</a>, usually of
                             history books.</p>
                     </div>
-                    <div class="col-4 offset-1">
-                        <a href="https://en.wikipedia.org/wiki/A_Philosopher_Lecturing_on_the_Orrery">
-                            <img src="img/orrery.jpg" alt="A Philosopher Lecturing on the Orrery"/>
-                        </a>
-                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row mt-4">
+    </div>
+    <div class="row mt-4">
+        <div class="col-12 px-0">
         </div>
     </div>
 </div>
