--- a/favorite-books.html
+++ b/favorite-books.html
@@ -45,11 +45,13 @@ title: Favorite books
                 <li>Karen Armstrong: <i>The Great Transformation</i></li>
                 <li>Robert Caro: Multi-volume Lyndon Johnson biography</li>
                 <li>Richard Feynman: <i>Surely You're Joking, Mr. Feynman!</i></li>
+                <li>Jon Gertner: <i>The Idea Factory: Bell Labs and the Great Age of American Innovation</i></li>
                 <li>Michael Hiltzik: <i>Dealers of Lightning: Xerox PARC and the Dawn of the Computer Age</i></li>
                 <li>John Keegan: <i>The Face of Battle</i></li>
                 <li>Steven Levy: <i>Hackers</i></li>
                 <li>Robert K. Massie: <i>Dreadnought</i></li>
                 <li>John McPhee: <i>The Control of Nature</i></li>
+                <li>Thomas Ricks: <i>The Generals: American Military Command from World War II to Today</i></li>
                 <li>Studs Terkel: <i>Working</i></li>
                 <li>Howard Zinn: <i>A People's History of the United States</i></li>
             </ul>
