add link to Arden on contact page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@ title: About
                         <h5 class="text-center">Interests</h5>
                         <p>
                             My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion
-                            historian. In my free time I work with Jennifer and our colleague&nbsp;<a
-                                href="https://www.ardenkirkland.com">Arden Kirkland</a>&nbsp;on projects supporting digital
+                            historian. In my free time I work with Jennifer and our colleague&nbsp;&nbsp;on projects supporting digital
                             costume collections.
                         </p>
                         <p>
