--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@ title: Projects
             class="ms-4"
             href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
             img_src="/img/dressdiscover.png"
-            subtitle="Visual workflow for cataloging cultural heritage objects"
+            subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
             title="DressDiscover"
         %}
     </div>
