use formspark for submission

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ title: Contact
     </div>
     <div class="row">
         <div class="col-12">
-            <form accept-charset="UTF-8" action="https://www.formbackend.com/f/8bc7bbf665501ba5" method="POST">
+            <form accept-charset="UTF-8" action="https://submit-form.com/d1QIpIym" method="POST">
                 <div class="mb-4">
                     <label for="name" class="form-label"><b>Name</b> <span class="text-muted">(required)</span></label>
                     <input autofocus type="text" class="form-control" id="name" name="name" required>
