--- a/index.html
+++ b/index.html
@@ -4,63 +4,47 @@ title: About
 ---
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 px-0 text-center">
-            <h1>Minor Gordon</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 col-md-4 mt-4 ps-0">
+        <div class="col-md-6 col-xs-12">
             <div class="container-fluid">
-                <div class="row mt-2 text-center">
-                    <h3>Professional</h3>
+                <div class="row mb-4">
+                    <div class="col-12">
+                        <h1>Minor Gordon</h1>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 ps-0">
+                <div class="row my-4">
+                    <div class="col-12">
+                        <h4>I help people explore the possibilities of software.</h4>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="border border-2 border-secondary col-12 rounded pt-2">
                         <p>
-                            I am a senior software and solutions engineer, technical lead, thinker-doer, and occasional flower arranger.
+                            I am a senior software and solutions engineer, technical lead, thinker-doer, and occasional
+                            flower arranger.
                         </p>
                         <p>
-                            Since earning my Ph.D. in Computer Science I've worked in industrial research, small businesses and startups, and academia. I thrive in situations that require lateral thinking, wearing multiple hats, and dealing with ambiguity while still creating value.
+                            Since earning my Ph.D. in computer science I've worked in industrial research, SMBs,
+                            freelancing, professional services firms, and academia. I have contributed to multiple
+                            early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve
+                            been programming computers for three decades, from BBS doors to compilers and parallel file
+                            systems.
                         </p>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-12 text-center">
+                        <a class="btn btn-lg btn-primary" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 mt-4 px-0 text-center">
-            <a href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9"><img alt="Image of a tulip" class="mt-4" src="img/tulip.webp" style="max-width: 300px"/></a>
-        </div>
-        <div class="col-sm-12 col-md-4 mt-4 pe-0">
-            <div class="container-fluid">
-                <div class="row text-center">
-                    <h3>Personal</h3>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-6 ps-0">
-                        <h5 class="text-center">The name "Minor"</h5>
-                        <p>"Minor" is a family name. My father, Dr. Minor W. Gordon, was a clinical psychologist in
-                            Claremore, Oklahoma, where I grew up.</p>
-                        <p>My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore, as was his father,
-                            Dr. Minor H. Gordon.</p>
-                    </div>
-                    <div class="col-6 pe-0 ps-4">
-                        <h5 class="text-center">Interests</h5>
-                        <p>
-                            My wife&nbsp;<a href="https://jfgordon.net">Jennifer Farley Gordon</a>&nbsp;is a fashion
-                            historian. In my free time I work with Jennifer and our colleague&nbsp;&nbsp;on projects supporting digital
-                            costume collections.
-                        </p>
-                        <p>
-                            I am a lifelong learner and <a href="favorite-books.html">avid reader</a>, usually of
-                            history books.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row mt-4">
-    </div>
-    <div class="row mt-4">
-        <div class="col-12 px-0">
+        <div class="col-md-6 col-xs-12 text-center">
+            <figure>
+                <img src="{{ "/img/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-height: 800px; max-width: 800px" />
+                <figcaption class="mt-2">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
+            </figure>
         </div>
     </div>
 </div>
+
+
