--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: About
 ---
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mb-4">
         <div class="col-md-6 col-xs-12">
             <div class="container-fluid">
                 <div class="row mb-4">
@@ -17,18 +17,19 @@ title: About
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="border border-2 border-secondary col-12 rounded pt-2">
+                    <div class="card col-12 pt-2">
+                        <div class="card-body px-0">
                         <p>
-                            I am a senior software and solutions engineer, technical lead, thinker-doer, and occasional
-                            flower arranger.
+                            I am a senior software and solutions engineer, technical lead, and thinker-doer.
                         </p>
                         <p>
-                            Since earning my Ph.D. in computer science I've worked in industrial research, SMBs,
+                            Since earning my PhD in computer science I've worked in industrial research, SMBs,
                             freelancing, professional services firms, and academia. I have contributed to multiple
                             early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve
                             been programming computers for three decades, from BBS doors to compilers and parallel file
                             systems.
                         </p>
+                        </div>
                     </div>
                 </div>
                 <div class="row mt-4">
@@ -40,9 +41,74 @@ title: About
         </div>
         <div class="col-md-6 col-xs-12 text-center">
             <figure>
-                <img src="{{ "/img/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-height: 800px; max-width: 800px" />
-                <figcaption class="mt-2">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
+                <img src="{{ "/img/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
+                <figcaption class="mt-2 text-secondary">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
             </figure>
+        </div>
+    </div>
+    <div class="row my-4">&nbsp;</div>
+    <div class="row my-4">&nbsp;</div>
+    <div class="row my-4">
+        <div class="col-md-6 col-xs-12 text-center">
+            <img src="{{ "/img/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
+        </div>
+        <div class="col-md-6 col-xs-12">
+            <div class="card h-100 pt-4">
+                <h4 class="card-title text-center">What I do</h4>
+                <div class="card-body">
+                    <p>
+                        <b>Analyze.</b> I enjoy helping people diagnose stubborn technical problems. When asked, I can provide thoughtful and succinct analysis in presentations and writing.
+                    </p>
+                    <p>
+                        <b>Execute.</b> I’m often asked to lead high-risk, high-reward, strategic projects. I can rapidly implement prototypes to get feedback from users. I understand that the prototype often becomes the product, and aim for an appropriate compromise between speed and quality.
+                    </p>
+                    <p>
+                        <b>Guide.</b> I can be a sounding board for new ideas, and offer a broad, alternative perspective on both technical and non-technical concerns. I deeply enjoy mentoring people one-on-one, and strive to empower them to move beyond me. I am able to ask questions in an empathetic way, and take my ego out of the equation.
+                    </p>
+                    <p>
+                        <b>Translate.</b> I strive to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I am eager to learn how they talk about the challenges they face. I’m able to translate between that language and software requirements.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row my-4">&nbsp;</div>
+    <div class="row my-4">&nbsp;</div>
+    <div class="row my-4">
+        <div class="col-md-6 col-xs-12">
+            <div class="card pt-4">
+                <h4 class="card-title text-center">What I value</h4>
+                <h6 class="card-subtitle text-center">in my professional life, and the people I work with</h6>
+                <div class="card-body">
+                    <p>
+                    <b>Communication.</b> I believe the ability to communicate well – with words, images, dress, body language, and other means – is essential to success as a technologist. Code is a medium, too: "Programs must be written for people to read, and only incidentally for machines to execute." (Abelson)
+                    <p/>
+                    <p>
+                    <b>Creativity.</b> I’m drawn to problems that have ambiguous requirements, non-obvious solutions, and visible impact. I enjoy thinking laterally and drawing on the breadth of my knowledge and experience.
+                    <p/>
+                    <p>
+                    <b>Determination.</b> I love working with people who are hungry for growth and continual improvement, don’t shy away from hard problems, and see failure as an opportunity to learn.
+                    <p/>
+                    <p>
+                    <b>Emotional intelligence.</b> It’s possible to get by in the IT industry on technical skill alone, but it’s not very effective. Interpersonal skills have a way of amplifying your impact – working on teams, serving clients and users – while a lack of those skills undermines your potential.
+                    <p/>
+                    <p>
+                    <b>Humility.</b> Throughout my life I’ve sought out teachers, mentors, and colleagues whose knowledge, skill, and talent were a stark reminder that there is always room for improvement. Whenever I started to feel like a big fish in the pond, I knew it was time to find a bigger pond. Eventually I learned enough to recognize the depths of my own ignorance.
+                    <p/>
+                    <p>
+                    <b>Idiosyncrasy.</b> I am an engineer who is passionate about fashion history and vintage clothes. In my spare time I enjoy arranging flowers. I like working with people who defy conventional expectations.
+                    <p/>
+                    <p>
+                    <b><a href="https://en.wikipedia.org/wiki/Openness_to_experience">Openness</a>.</b> I am a lifelong learner and <a href="{{ "/favorite-books.html" | prepend: site.baseurl }}">avid reader</a>. I enjoy traveling and have lived in multiple countries.
+                    <p/>
+                    <p>
+                    <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a family of doctors, teachers, and social workers.</a> We are people who help other people by teaching and healing. I’ve maintained the same ideals and focus in my work as an engineer.
+                    <p/>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-xs-12 text-center">
+            <img src="{{ "/img/tulip.webp" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
         </div>
     </div>
 </div>
