tweak index text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: About
                     <div class="card col-12 pt-2">
                         <div class="card-body px-0">
                         <p>
-                            I am a senior software and solutions engineer, technical lead, and thinker-doer.
+                            I am a senior software and solutions engineer and technical lead.
                         </p>
                         <p>
                             Since earning my PhD in computer science I've worked in industrial research, SMBs,
